RESOLVED FIXED76042
Fix turbulence bug when stitch tiles enabled and rendered in parallel
https://bugs.webkit.org/show_bug.cgi?id=76042
Summary Fix turbulence bug when stitch tiles enabled and rendered in parallel
Zoltan Herczeg
Reported 2012-01-11 02:30:16 PST
The tile stitch variables are used (and overwritten) by all threads in the same time.
Attachments
patch (10.91 KB, patch)
2012-01-11 02:33 PST, Zoltan Herczeg
zimmermann: review+
Zoltan Herczeg
Comment 1 2012-01-11 02:33:23 PST
Nikolas Zimmermann
Comment 2 2012-01-11 02:43:04 PST
Comment on attachment 121996 [details] patch Ah thanks a lot for finding that annoying bug! You should mention in the ChangeLog that this fixes the problems with svg/dynamic-updates/SVGFETurb* and update the pixel test results.. still, r=me.
Zoltan Herczeg
Comment 3 2012-01-12 06:58:28 PST
Note You need to log in before you can comment on or make changes to this bug.