Fix turbulence bug when stitch tiles enabled and rendered in parallel https://bugs.webkit.org/show_bug.cgi?id=76042

Reviewed by Nikolas Zimmermann.

Source/WebCore:

The width / height / wrap members are used by all threads
in the same time. The patch makes them local for all threads.

Fixes the layout fails in svg/dynamic-updates/SVGFETurbulence*

* platform/graphics/filters/FETurbulence.cpp:
(WebCore::FETurbulence::noise2D):
(WebCore::Noise::if):
(WebCore::FETurbulence::calculateTurbulenceValueForPoint):
(WebCore::FETurbulence::fillRegion):
* platform/graphics/filters/FETurbulence.h:
(WebCore::FETurbulence::PaintingData::PaintingData):
(WebCore::FETurbulence::StitchData::StitchData):

LayoutTests:

Update mac expected files.

* platform/mac-snowleopard/svg/dynamic-updates/SVGFETurbulenceElement-dom-stitchTiles-attr-expected.png:
* platform/mac-snowleopard/svg/dynamic-updates/SVGFETurbulenceElement-svgdom-stitchTiles-prop-expected.png:
* platform/mac/svg/dynamic-updates/SVGFETurbulenceElement-dom-stitchTiles-attr-expected.png:
* platform/mac/svg/dynamic-updates/SVGFETurbulenceElement-svgdom-stitchTiles-prop-expected.png:



Canonical link: https://commits.webkit.org/92986@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@104824 268f45cc-cd09-0410-ab3c-d52691b4dbfc