Source/WebCore/platform/graphics/filters/FETurbulence.h
@@ -74,17 +74,33 @@ private:
     static const int s_minimalRectDimension = (100 * 100); // Empirical data limit for parallel jobs.
 
     struct PaintingData {
+        PaintingData(long paintingSeed, const IntSize& paintingSize)
+            : seed(paintingSeed)
+            , filterSize(paintingSize)
+        {
+        }
+
         long seed;
         int latticeSelector[2 * s_blockSize + 2];
         float gradient[4][2 * s_blockSize + 2][2];
-        int width; // How much to subtract to wrap for stitching.
-        int height;
-        int wrapX; // Minimum value to wrap.
-        int wrapY;
         IntSize filterSize;
 
-        PaintingData(long paintingSeed, const IntSize& paintingSize);
         inline long random();
+    };
+
+    struct StitchData {
+        StitchData()
+            : width(0)
+            , wrapX(0)
+            , height(0)
+            , wrapY(0)
+        {
+        }
+
+        int width; // How much to subtract to wrap for stitching.
+        int wrapX; // Minimum value to wrap.
+        int height;
+        int wrapY;
     };
 
     template<typename Type>
@@ -103,8 +119,8 @@ private:
     FETurbulence(Filter*, TurbulenceType, float, float, int, float, bool);
 
     inline void initPaint(PaintingData&);
-    float noise2D(int channel, PaintingData&, const FloatPoint&);
-    unsigned char calculateTurbulenceValueForPoint(int channel, PaintingData&, const FloatPoint&);
+    float noise2D(int channel, PaintingData&, StitchData&, const FloatPoint&);
+    unsigned char calculateTurbulenceValueForPoint(int channel, PaintingData&, StitchData&, const FloatPoint&);
     inline void fillRegion(ByteArray*, PaintingData&, int, int);
 
     TurbulenceType m_type;
